[package]
edition = "2021"
name = "rp2040-project-template"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12"
alloc-cortex-m = "0.4.2"

defmt = "0.3"
defmt-rtt = "0.3"
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.0"
pio-proc = "0.2.1"
libm = "0.2.2"

embedded-dma = "0.1.2"
#rp2040-hal = "0.5.0"
# We're using a Pico by default on this template
#rp-pico = "0.4"
rp-pico = { path = "C:\\Users\\PabloLozano\\Projects\\pico\\rp-hal\\boards\\rp-pico"}

ili9341 = { path = "C:\\Users\\PabloLozano\\Projects\\pico\\ili9341-rs", features = ["embedded-graphics-core", "graphics"], default-features=false }
#ili9341 = {version = "0.5.0", features = ["embedded-graphics-core", "graphics"], default-features=false }
display-interface = "0.4.1"
embedded-graphics = "0.7.1"
embedded-graphics-core = "0.3"
display-interface-spi = "0.4.0"
unroll = "0.1.5"
#ili9341_pio = {path = "/home/plozano/projects/pico/ili9341_pio"}

gb-core = {path = "C:\\Users\\PabloLozano\\Projects\\pico\\rust-gb\\rust-gb\\gb-core"}
# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.3"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.5", features=["rt"] }
# rp2040-boot2 = "0.2"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = true
debug-assertions = true
incremental = true
opt-level = 0
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
